Reportes de capacitador

--- a/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
+++ b/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
@@ -1,7 +1,11 @@
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
 <div class="container-fluid">
-    <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
-    <label class="btn btn-outline-success" for="success-outlined"
-        (click)="selectedForm = 'reportesEstudiantes'">Reportes de estudiantes terminados</label>
+    <input type="radio" class="btn-check" name="options-outlined" id="listaEstudiantes" autocomplete="off" checked>
+    
+        <label class="btn btn-outline-success" for="listaEstudiantes" (click)="selectedForm = 'culminados'">Reportes de
+            estudiantes</label>
+
 
     <input type="radio" class="btn-check" name="options-outlined" id="notas" autocomplete="off">
     <label class="btn btn-outline-success" for="notas" (click)="selectedForm = 'reportesNotas'">Reportes de
@@ -11,85 +15,43 @@
     <label class="btn btn-outline-danger" for="desertores" (click)="selectedForm = 'reportesDesertores'">Reportes de
         estudiantes desertores</label>
 
-    <div *ngIf="selectedForm === 'reportesEstudiantes'">
+    <div *ngIf="selectedForm === 'culminados'">
         <label for="exampleDataList" class="form-label">Lista de estudiantes</label>
         <!-- [(ngModel)]="cedula"  -->
         <div class="input-group">
-            <input type="search" id="cedula" name="cedula" class="form-control rounded"
-                placeholder="Search" aria-label="Search" aria-describedby="search-addon"
-                (input)="onSearchInputChange($event)" />
+            <input type="search" id="cedula" name="cedula" class="form-control rounded" placeholder="Search"
+                aria-label="Search" aria-describedby="search-addon" (input)="onSearchInputChange($event)"
+                [(ngModel)]="nombre" (keydown)="validarNombre()" />
             <button type="button" class="btn btn-outline-primary">Buscar</button>
         </div>
         <div class="table-hover">
-            <table class="table">
+            <table class="table" id="myTable">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">CEDULA</th>
+                        <th scope="col">NOMBRE</th>
+                        <th scope="col">APELLIDO</th>
+                        <th scope="col">CORREO</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row">0106574589</th>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>mark@gmail.com</td>
                     </tr>
                     <tr>
-                        <th scope="row">2</th>
+                        <th scope="row">0106574575</th>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>jacob@gmail.com</td>
                     </tr>
                     <tr>
-                        <th scope="row">3</th>
+                        <th scope="row">0106574475</th>
                         <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div *ngIf="selectedForm === 'reportesNotas'">
-        <label for="exampleDataList" class="form-label">Datalist example</label>
-        <div class="input-group">
-            <input type="search" id="cedula" name="cedula" class="form-control rounded"
-                placeholder="Search" aria-label="Search" aria-describedby="search-addon"
-                (input)="onSearchInputChange($event)" />
-            <button type="button" class="btn btn-outline-primary">Buscar</button>
-        </div>
-        <div class="table-hover">
-            <table class="table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>Bird</td>
+                        <td>larry@gmail.com</td>
                     </tr>
                 </tbody>
             </table>
@@ -97,44 +59,90 @@
     </div>
 
     <div *ngIf="selectedForm === 'reportesDesertores'">
-        <label for="exampleDataList" class="form-label">Datalist example</label>
+        <label for="exampleDataList" class="form-label">Reportes de estudiantes desertores</label>
         <div class="input-group">
-            <input type="search" id="cedula" name="cedula" class="form-control rounded"
-                placeholder="Search" aria-label="Search" aria-describedby="search-addon"
-                (input)="onSearchInputChange($event)" />
+            <input type="search" id="cedula" name="cedula" class="form-control rounded" placeholder="Search"
+                aria-label="Search" aria-describedby="search-addon" (input)="onSearchInputChange($event)" />
             <button type="button" class="btn btn-outline-primary">Buscar</button>
         </div>
+        
         <div class="table-hover">
-            <table class="table">
+            <table class="table" id="myTable">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">CEDULA</th>
+                        <th scope="col">NOMBRE</th>
+                        <th scope="col">APELLIDO</th>
+                        <th scope="col">CORREO</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row">0106574589</th>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>mark@gmail.com</td>
                     </tr>
                     <tr>
-                        <th scope="row">2</th>
+                        <th scope="row">0106574575</th>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>jacob@gmail.com</td>
                     </tr>
                     <tr>
-                        <th scope="row">3</th>
+                        <th scope="row">0106574475</th>
                         <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>Bird</td>
+                        <td>larry@gmail.com</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
+
+    <div *ngIf="selectedForm === 'reportesNotas'">
+        <label for="exampleDataList" class="form-label">Reportes de notas</label>
+        <div class="input-group">
+            <input type="search" id="cedula" name="cedula" class="form-control rounded" placeholder="Search"
+                aria-label="Search" aria-describedby="search-addon" (input)="onSearchInputChange($event)" />
+            <button type="button" class="btn btn-outline-primary">Buscar</button>
+        </div>
+        <div class="table-hover">
+            <table class="table" id="myTable">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Nota</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td scope="row">1</td>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>7.5/10</td>
+                    </tr>
+                    <tr>
+                        <td scope="row">2</td>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>8/10</td>
+                    </tr>
+                    <tr>
+                        <td scope="row">3</td>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>9/10</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    
+</div>
+<div>
+    <button type="button" class="btn btn-outline-success" (click)="ngAfterViewInit()">Excel</button>
+    <button type="button" class="btn btn-outline-danger">PDF</button>
 </div>
