--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -423,7 +423,24 @@
         </a>
       </li><!-- End Login Page Nav -->
 
-     
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#mecanismo-eva-nav" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-gem"></i><span>Mecanismos de evaluación</span><i class="bi bi-chevron-down ms-auto"></i>
+        </a>
+        <ul id="mecanismo-eva-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+          <li>
+            <a (click)=" goToregistermecanismos($event)">
+              <i class="bi bi-circle"></i><span>Registrar Mecanismos</span>
+            </a>
+          </li>
+          <li>
+            <a (click)="goToeditDetalleME($event)">
+              <i class="bi bi-circle"></i><span>Detalle del Mecanismo</span>
+            </a>
+          </li>
+         
+        </ul>
+      </li><!-- End Charts Nav -->
 
       
 
