--- a/src/app/modules/docente-capacitador/register-especialidad/pages/register-especialidad/register-especialidad.component.html
+++ b/src/app/modules/docente-capacitador/register-especialidad/pages/register-especialidad/register-especialidad.component.html
@@ -7,7 +7,7 @@
           <div class="form-group">
             <label for="area">Área:</label>
             <select class="form-control" id="area" [(ngModel)]="especialidadSeleccionada.area.areId" name="area" (change)="mostrarDatosSeleccionados()">
-              <option *ngFor="let area of areas" [value]="area.areId" [selected]="area.areId === especialidadSeleccionada?.area?.areId">{{ area.areCodigo }}.- {{ area.areNombre }}</option>
+              <option *ngFor="let area of areas" [value]="area.areId" [selected]="area.areId === especialidadSeleccionada.area.areId">{{ area.areCodigo }}.- {{ area.areNombre }}</option>
             </select>
           </div>
           <div class="form-group">
